<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="vertical">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:weightSum="2">

       <TextView
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:text="@string/row_category_name"
           android:textColor="@color/colorContent"
           android:layout_weight="1"/>
       <TextView
           android:id="@+id/textViewCategoryName"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:textColor="@color/colorContent"
           android:layout_weight="1"
           />
   </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/row_budget_name"
            android:textColor="@color/colorContent"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/textViewCategoryBudget"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorContent"
            android:layout_weight="1"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewExceedIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exceed_indicator"
        android:textColor="@color/colorWhite"/>

</LinearLayout>